--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <a id="skip-link" href="#content">Skip to main content</a>
+    <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
 
         <header class="jumbotron jumbotron-fluid">
             <div class="container">
