Adding overflow scrolling

--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,7 @@
 
                     <div class="row form-group">
                         <div class="col-sm-12">
-                            <select class="custom-select custom-select-lg mb-3" name="type" id="type">
+                            <select title="Type" class="custom-select custom-select-lg mb-3" name="type" id="type">
                                 <option value="car">Car</option>
                                 <option value="truck">Truck</option>
                                 <option value="bike">Bike</option>
