Added animation to add function.

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
         <header class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">CarParkJS</h1>
-                <p class="lead">An example parking house registry app</p>
+                <p class="lead">An example car park registry app</p>
             </div>
         </header>
 
